[package]
name = "broute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }
rand = "0.8.4"
rand_distr = "0.4.3"
osmpbf = "0.2"

[[bench]]
name = "dijkstra_benchmark"
harness = false