[package]
name = "broute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Benchmarking
criterion = { version = "0.4.0", features = ["html_reports"] }
# Random numbers
rand = "0.8.5"
rand_pcg = "0.3.1"
# Random distributions
rand_distr = "0.4.3"
# Reading OpenStreetMap files
osmpbf = "0.3"
# Reading TSPLIB files (academic travelling salesman format)
tsplib = "0.1.0"
# Outputting to GraphViz graphs
graphviz-rust = "0.6.1"
# Outputting to charts
plotlib = "0.5.1"
# Outputting to drawn images
svg = "0.13.0"
# JSON API
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.158"
# Comparing floats in tests
float-cmp = "0.9.0"
# Profiling
pprof = { git = "https://github.com/tikv/pprof-rs.git", features = ["frame-pointer", "flamegraph"] }

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "hc_statistics"
path = "src/bin/hc_statistics.rs"

[[bin]]
name = "hc_profiling"
path = "src/bin/hc_profiling.rs"

[[bin]]
name = "sp_statistics"
path = "src/bin/sp_statistics.rs"
